syntax = "proto3";
package singlemalt_proto;

service ApproximateSetService {
    rpc Insert (InsertRequest) returns (InsertReply);
}

message InsertRequest {
   string value = 1;
}

message InsertReply {
    string message = 1;
}